assets/css/app.scss
@import "vendor/highlight.js/atom-one-dark.min.css";
@import "mixins.scss";
@import "cards.scss";

:root {
    --md-text-font-family: Helvetica, sans-serif;
    --md-code-font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;

    --md-hue: 218;
    --md-footer-bg-color: hsl(var(--md-hue), 38%, 12%, 0.5);
    --md-footer-bg-color--dark: hsl(var(--md-hue), 38%, 12%, 1);

    --hc-role-default: black;
    --hc-role-portal-developer: #9427b9;
    --hc-role-integrator: #e7af29;
    --hc-role-administrator: #db026b;
    --hc-role-playground: #aa0d16;
    --hc-role-contributor: #00b6d5;

    --hc-role-burn--intensity: 30px;
    --hc-role-burn--variance: 4px;
}

[data-md-color-scheme="slate"] {
    --md-hue: 218;
    --hc-role-default: white;
    --md-primary-fg-color: #0A6EE7;
    --md-default-bg-color: hsl(var(--md-hue), 38%, 16%);
    --md-default-bg-color--light: hsl(var(--md-hue), 38%, 24%);
    --md-default-bg-color--lighter: hsl(var(--md-hue), 38%, 32%);
    --md-default-bg-color--lightest: hsl(var(--md-hue), 38%, 40%);
    --md-code-bg-color: hsl(var(--md-hue), 20%, 26%);

    /* uml dark-mode */
    img[src*="uml"] {
        filter: invert(1.0) hue-rotate(180deg);
    }
}

.md-tabs,
.md-header {
    background: hsl(var(--md-hue), 38%, 12%);
}

@include animation-burn(default, var(--hc-role-default));
@include animation-burn(portal-developer, var(--hc-role-portal-developer));
@include animation-burn(integrator, var(--hc-role-integrator));
@include animation-burn(administrator, var(--hc-role-administrator));
@include animation-burn(playground, var(--hc-role-playground));
@include animation-burn(contributor, var(--hc-role-contributor));

@include color-basic(default, var(--hc-role-default));
@include color-basic(portal-developer, var(--hc-role-portal-developer));
@include color-basic(integrator, var(--hc-role-integrator));
@include color-basic(administrator, var(--hc-role-administrator));
@include color-basic(playground, var(--hc-role-playground));
@include color-basic(contributor, var(--hc-role-contributor));

body.hc-role-default .md-tabs,
body.hc-role-default .md-header,
body.hc-role-portal-developer .md-tabs,
body.hc-role-portal-developer .md-header,
body.hc-role-integrator .md-tabs,
body.hc-role-integrator .md-header,
body.hc-role-administrator .md-tabs,
body.hc-role-administrator .md-header,
body.hc-role-playground .md-tabs,
body.hc-role-playground .md-header,
body.hc-role-contributor .md-tabs,
body.hc-role-contributor .md-header {
    background: var(--md-primary-fg-color);
}

.md-grid {
    max-width: 85rem;
}

.md-grid-dense {
    max-width: 65rem;
    line-height: 1.5;
}

.mdx-hero {
    padding: 0;
}

.mdx-hero::after {
    content: '';
    display: block;
    clear: both;
}

.mdx-hero > picture {
    width: 100%;
    padding: 1rem;
    display: block;
}

.mdx-hero picture svg {
    fill: #000000;
    height: 7rem;
    margin: 1rem auto;
    display: block;
}

[data-md-color-scheme="slate"] .mdx-hero picture svg {
    fill: var(--md-default-fg-color);
}

.mdx-hero > .mdx-hero__content .md-button,
.mdx-hero > .mdx-hero__content h1,
.mdx-hero > .mdx-hero__content p {
    display: block;
    margin: 0 1rem;
}

.mdx-hero > .mdx-hero__content .md-button {
    display: flex;
    justify-content: space-between;
}

.mdx-hero > .mdx-hero__content .md-button svg {
    display: inline;
    height: 1.2rem;
    vertical-align: middle;
    line-height: 1.2rem;
    fill: white;
}

.mdx-hero > .mdx-hero__content h1 {
    text-align: center;
    padding-bottom: 1rem;
}

.hc-role-burn:hover {
    animation-duration: 8s;
    animation-timing-function: cubic-bezier(0.68, -0.55, 0.27, 1.55);
    animation-iteration-count: infinite;
}

@media screen and (min-width: 45rem) {
    .mdx-hero {
        padding: 3rem;
    }

    .mdx-hero > picture {
        float: left;
        margin-right: 1rem;
        width: 10rem;
        padding: 0;
    }

    .mdx-hero > picture svg {
        height: auto;
    }

    .mdx-hero > .mdx-hero__content {
        float: left;
        margin-left: 1rem;
    }

    .mdx-hero > .mdx-hero__content .home-claim {
        font-size: 2rem;
    }

    .mdx-hero > .mdx-hero__content .home-instructions {
        display: inline-block;
    }

    .mdx-hero > .mdx-hero__content .md-button {
        display: inline;
    }

    .mdx-hero > .mdx-hero__content .md-button svg {
        display: none
    }

    .mdx-hero > .mdx-hero__content h1 {
        text-align: left;
    }

    .mdx-hero > .mdx-hero__content .md-button,
    .mdx-hero > .mdx-hero__content h1,
    .mdx-hero > .mdx-hero__content p {
        margin: 0;
    }
}

.tag-typewriter {
    position: relative;
    padding-right: 1px;
}

.tag-typewriter::after {
    display: block;
    content: '';
    width: 2px;
    background-color: var(--md-default-fg-color);
    position: absolute;
    right: 0;
    top: 0;
    bottom: 0;
    opacity: .92;
    margin: 1px 0;
    animation: blink-animation 1s steps(3, start) infinite;
    -webkit-animation: blink-animation 1s steps(3, start) infinite;
}

@keyframes blink-animation {
    to {
        visibility: hidden;
    }
}

@-webkit-keyframes blink-animation {
    to {
        visibility: hidden;
    }
}

.heptaconnect-footer-copyright, /* style clone of md-footer-copyright to disable download link generator */
.heptaconnect-footer-download {
    color: var(--md-footer-fg-color--lighter);
    font-size: .64rem;
    margin: auto .6rem;
    padding: .4rem 0;
    width: 100%;
}

.heptaconnect-footer-download {
    display: flex;
    align-items: center;
    justify-content: center;
}

.heptaconnect-footer-download > span {
    margin-right: 0.64rem;
}

.heptaconnect-footer-download > svg {
    fill: var(--md-footer-fg-color--lighter);
    height: 0.64rem;
}

.heptaconnect-footer-copyright,
.heptaconnect-footer-download,
.md-footer-social {
    flex-basis: 100%;
    text-align: center;
}

.heptaconnect-footer-privacy, .heptaconnect-footer-imprint {
    color: var(--md-footer-fg-color--lighter);
    font-size: .64rem;
    text-align: center;
    flex-basis: calc(50% - 2 * .6rem);
    margin: auto .6rem;
    padding: .4rem 0;
    width: 100%;
}

.heptaconnect-footer-privacy {
    text-align: right;
}

.heptaconnect-footer-imprint {
    text-align: left;
}

.md-footer-social__link {
    width: 2.1rem;
    padding-left: .25rem;
    padding-right: .25rem;
}

@media screen and (min-width: 45rem) {
    .heptaconnect-footer-copyright,
    .heptaconnect-footer-download,
    .md-footer-social {
        font-size: .64rem;
        flex-basis: 30%;
    }

    .heptaconnect-footer-download {
        justify-content: flex-start;
        order: 1;
    }

    .heptaconnect-footer-copyright {
        text-align: center;
        order: 2;
    }

    .md-footer-social {
        text-align: right;
        order: 3;
    }

    .heptaconnect-footer-privacy {
        order: 4;
    }

    .heptaconnect-footer-imprint {
        order: 5;
    }
}

